--- a/src/pages/mdas/AssistiveDeviceEquipmentSubsidy_ApplnForm.html
+++ b/src/pages/mdas/AssistiveDeviceEquipmentSubsidy_ApplnForm.html
@@ -15,7 +15,7 @@
     <div>
       <div class="labelText">I have a valid MDAS Ordinary Membership <span class="spanCss">*</span></div>
       <div class="radioGroup">
-        <label><input type="radio" name="sectionA_ordinaryMembership" id="sectionA_ordinaryMembershipYes" value="1" required> Yes</label>
+        <label><input type="radio" name="sectionA_ordinaryMembership" id="sectionA_ordinaryMembershipYes" value="1" > Yes</label>
         <label><input type="radio" name="sectionA_ordinaryMembership" id="sectionA_ordinaryMembershipNo" value="0"> No</label>
         <div><small><i>(If No, please complete Section B)</i></small></div>
       </div>
@@ -31,16 +31,16 @@
     </div>
     <div>
       <label for="sectionA_DisplayName">Display Name<span class="spanCss">*</span></label>
-      <input type="text" id="sectionA_DisplayName" name="sectionA_DisplayName" required/>
+      <input type="text" id="sectionA_DisplayName" name="sectionA_DisplayName" />
     </div>
     <div>
       <label for="sectionA_nric">NRIC / Birth Cert No.<span class="spanCss">*</span></label>
-      <input type="text" id="sectionA_nric" name="sectionA_nric" pattern="NRIC" required value="" />
+      <input type="text" id="sectionA_nric" name="sectionA_nric" pattern="NRIC"  value="" />
       <span class="form-error">Invalid NRIC</span>
     </div>
     <div>
       <div class="labelText">Date of Birth<span class="spanCss">*</span></div>
-      <input type="date" id="sectionA_Birth" name="sectionA_Birth" required/>
+      <input type="date" id="sectionA_Birth" name="sectionA_Birth" />
     </div>
     <h3>Contact No.</h3>
     <div>
@@ -84,15 +84,170 @@
       <div class="labelText">Date of Birth</div>
       <input type="Date" id="sectionB_Birth" name="sectionB_Birth" />
     </div>
+      <h3>Contact No.</h3>
+      <div>
+        <label for="sectionB_mobile">Handphone no</label>
+        <input type="text" id="sectionB_mobile" name="sectionB_mobile" pattern="Mobile" />
+      </div>
+      <div>
+        <label for="sectionB_home">Tel no(home)</label>
+        <input type="text" id="sectionB_home" name="sectionB_home" pattern="Mobile" />
+      </div>
+      <div>
+        <label for="sectionB_office">Tel no(office)</label>
+        <input type="text" id="sectionB_office" name="sectionB_office" pattern="Mobile" />
+      </div>
+      <div>
+        <label for="sectionB_relationship">Relationship to Main Applicant (PMD) <span class="spanCss">*</span> </label>
+        <select id="sectionB_relationship" name="sectionB_relationship" class="selRelationship"></select>
+      </div>
+      <div>
+        <label for="sectionB_email">Email</label>
+        <input type="email" id="sectionB_email" name="sectionB_email" pattern="email" />
+      </div>
   </fieldset>
   <fieldset id="SectionC" style="display:none">
   <h2>Section C</h2>
+  <p>Information On Subsidy</p>
+  <div>
+      <label>Type of Equipment: (please give details) </label>
+      <textarea id="sectionC_TypeofEquipment" name="sectionC_TypeofEquipment" cols="2" rows="2"></textarea>
+  </div>
+  <div>
+      <label>Reasons for purchase: </label>
+      <textarea id="sectionC_TypeforPurchase" name="sectionC_TypeforPurchase" cols="2" rows="2"></textarea>
+  </div>
+  <div>
+      <label>Quotations (from 3 different vendors):</label>
+      <table>
+        <tr><td>Description of Items Purchased</td><td>Price ($</td><td>Name of Vendor</td></tr>
+        <tr><td><input type="text" id="sectionC_Items1" name="sectionC_Items1" /></td><td><input type="text" id="sectionC_Price1" name="sectionC_Price1" /></td><td><input type="text" id="sectionC_Name1" name="sectionC_Name1" /></td></tr>
+        <tr><td><input type="text" id="sectionC_Items2" name="sectionC_Items2" /></td><td><input type="text" id="sectionC_Price1" name="sectionC_Price2" /></td><td><input type="text" id="sectionC_Name1" name="sectionC_Name1" /></td></tr>
+        <tr><td><input type="text" id="sectionC_Items3" name="sectionC_Items3" /></td><td><input type="text" id="sectionC_Price1" name="sectionC_Price3" /></td><td><input type="text" id="sectionC_Name1" name="sectionC_Name1" /></td></tr>
+      </table>
+  </div>
+  <div>
+    <div class="labelText">Is the equipment recommended by the doctor/therapist? (Attach report)</div>
+    <div class="radioGroup">
+      <label><input type="radio" name="sectionC_EquipmentRecommend" id="sectionC_EquipmentRecommendYes" value="1" > Yes</label>
+      <label><input type="radio" name="sectionC_EquipmentRecommend" id="sectionC_EquipmentRecommendNo" value="0"> No</label>
+    </div>
+  </div>
+  <div>
+    <div class="labelText">Have you been our previous applicant? </div>
+    <div class="radioGroup">
+      <label><input type="radio" name="sectionC_PreviousApplicant" id="sectionC_PreviousApplicantYes" value="1" > Yes</label>
+      <label><input type="radio" name="sectionC_PreviousApplicant" id="sectionC_PreviousApplicantNo" value="0"> No</label>
+    </div>
+  </div>
+  <div>
+    <p>Payment:</p>
+    <div class="labelText">Approved amount will be made directly to the vendor on behalf of the successful applicant.</div>
+    <div class="labelText">Applicant must submit the original invoice and receipt to MDAS.</div>
+    <div class="labelText">Applicant <a href="#">must not</a> seek funding from other agencies for the said product(s), unless approved by MDAS.</div>
+  </div>
   </fieldset>
   <fieldset id="SectionD" style="display:none">
   <h2>Section D</h2>
+  <p>Information On Sourec Of Income</p>
+  <div>
+    <div class="labelText">Your subsidy will be based on your valid Mean-Test. Do you have a valid Mean-Test? </div>
+    <div class="radioGroup">
+      <label><input type="radio" name="sectionD_ValidMeanTest" id="sectionD_ValidMeanTestYes" value="1" > Yes</label>
+      <label><input type="radio" name="sectionD_ValidMeanTest" id="sectionD_ValidMeanTestNo" value="0"> No</label>
+    </div>
+  </div>
+  <div>
+    <div class="labelText">Are you receiving any similar support from other agencies?</div>
+    <div class="radioGroup">
+      <label><input type="radio" name="sectionD_OtherAgencies" id="sectionD_OtherAgenciesYes" value="1" > Yes</label>
+      <label><input type="radio" name="sectionD_OtherAgencies" id="sectionD_OtherAgenciesNo" value="0"> No</label>
+    </div>
+    <label>If Yes, please specify the source and funding:</label>
+    <textarea id="sectionD_SourceDetails" name="sectionD_SourceDetails" cols="2" rows="2"></textarea>
+  </div>
   </fieldset>
   <fieldset id="SectionE" style="display:none">
   <h2>Section E</h2>
+  <lable  class="labelText">Declaration<br>Personal Data protection Act Declaration:</lable><br>
+  <p>I fully understand and agree that the personal information which I have provided may be disclosed to other agencies or individuals as per the provisions of the Act.</p>
+  <div>
+    <label for="sectionE_Check1"><input type="checkbox" id="sectionE_Check1" name="sectionE_Check"> Funding Application by relevant SG Enable / Government authorities / funding organisations.</label>
+    <label for="sectionE_Check2"><input type="checkbox" id="sectionE_Check2" name="sectionE_Check"> Assessment by professionals of hospitals/service provider agencies/government authorities/vendors.</label>
+    <label for="sectionE_Check3"><input type="checkbox" id="sectionE_Check3" name="sectionE_Check"> Use of photos/videos for public awareness for internal and external purposes.</label>
+  </div>
+  <div>
+    <lable  class="labelText">Declaration By Applicant/caregiver:</lable><br>
+    <p>Consent/Declaration must be signed by Main Applicant and/or the Ordinary Member. </p>
+    <label for="sectionE_Check4"><input type="checkbox" id="sectionE_Check4" name="sectionE_Check"> I/We hereby declare that all the information provided in this application form is true, correct and accurate to the best of my knowledge.</label>
+    <label for="sectionE_Check5"><input type="checkbox" id="sectionE_Check5" name="sectionE_Check"> I/We also understand that all information provided for the purpose of subsidy application will be kept confidential.</label>
+    <label for="sectionE_Check6"><input type="checkbox" id="sectionE_Check6" name="sectionE_Check"> I/We understand and acknowledge that if any of the information provided in this form is false or inaccurate, I will be liable to repay in full any subsidy and financial assistance granted inclusive of all administrative expenses, and/or denied future financial assistance for a stipulated period of time set by the Association.</label>
+    <p >I/We hereby confirm that I/We understand and agree to all the provisions in this form. </label>
+  </div>
+  <div>
+    <h3>MAIN APPLICANT</h3>
+    <div>
+      <label for="sectionE_MainName">Name<span class="spanCss">*</span></label>
+      <input type="text" id="sectionE_MainName" name="sectionE_MainName" required/>
+    </div>
+    <div>
+      <label for="sectionE_MainSignature">Signature/Thumbprint</label>
+      <input type="text" id="sectionE_MainSignature" name="sectionE_MainSignature" />
+    </div>
+    <div>
+      <label for="sectionE_MainDate">Date</label>
+      <input type="Date" id="sectionE_MainDate" name="sectionE_MainDate" />
+    </div>
+    <h3>ORDINARY MEMBERSHIP HOLDER (IF MAIN APPLICANT IS NOT A MEMBER)</h3>
+    <div>
+      <label for="sectionE_MemberName">Name</label>
+      <input type="text" id="sectionE_MemberName" name="sectionE_MemberName" />
+    </div>
+    <div>
+      <label for="sectionE_MemberSignature">Signature/Thumbprint</label>
+      <input type="text" id="sectionE_MemberSignature" name="sectionE_MemberSignature" />
+    </div>
+    <div>
+      <label for="sectionE_MemberDate">Date</label>
+      <input type="Date" id="sectionE_MemberDate" name="sectionE_MemberDate" />
+    </div>
+    <p>No signature/thumbprint required if the main applicant is below 16 years old</p>
+  </div>
+  <div>
+    <table>
+      <tr>FOR OFFICIAL USE</tr>
+      <tr><td>Recevced on:<input type="text" id="sectionE_RecevcedOn"></td><td>Assessment  on:<input type="text" id="sectionE_AssessmentOn"></td><td>Recommendation:<input type="text" id="sectionE_Recommendation"></td><td>Approved On:<input type="text" id="sectionE_ApprovedOn"></td></tr>
+      <tr><td>Processed by:<input type="text" id="sectionE_ProcessedBy"></td><td>Assessor:<input type="text" id="sectionE_Assessor"></td><td>Commence On:<input type="text" id="sectionE_CommenceOn"></td><td></td></tr>
+    </table>
+    <label>CASE NOTE: </label>
+    <textarea id="sectionE_CaseNote" name="sectionE_CaseNote" cols="2" rows="2"></textarea>
+  </div>
+  <div>
+    <h3>Muscular Dystrophy Association (Singapore)</h3>
+    <h3>ASSISTIVE DEVICE & EQUIPMENT SUBSIDY</h3>
+    <h3>TERMS & CONDITIONS</h3>
+
+      <label class="labelText">1. Applicant must be member of MDAS with no arrears of membership subscription fees.</label>
+      <label class="labelText">2. Applicant must submit the following documents:-<br>
+        <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&radic; Application form for Equipment Fund</span><br>
+        <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&radic; alid Means-Testing Form within the stipulated period</span><br>
+        <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&radic; Recommendation of equipment by therapist or medical doctors, if any</span><br>
+        <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&radic; Quotation(s) of equipment</span>
+      </label>
+      <label class="labelText">3. Applicant must demonstrate a clear and obvious need for the equipment, ie. the lack of which will result in significant hardship.</label>
+      <label class="labelText">4. Applicant MUST NOT seek funding from other agencies for the said product(s), unless approved by MDAS.</label>
+      <label class="labelText">5. Applicant MUST NOT purchase the equipment prior to submission and/or approval of application.</label>
+      <label class="labelText">6. Original receipt must be submitted as proof of purchase by the applicant and within one month after notification of approval or unless otherwise stated.</label>
+      <label class="labelText">7. Upon cessation of usage of equipment, it is the responsibility of the applicant to inform MDAS on the status of equipment.  MDAS has the right to retrieve the equipment of usage, where necessary.</label>
+      <label class="labelText">8. Subsequent application for similar item would be considered only after the required lifespan period is fulfilled.<br>
+        <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Motorized / Powered Wheelchair  – 3 years</span><br>
+        <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Manual Wheelchair  –  5 years (unless out-grown in size)</span><br>
+        <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Special Seats - 5 years (unless out-grown in size)</span><br>
+        <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Breathing Machine (eg. Bi-Pap, Cough Assist) - 4 years</span>
+      </label>
+      <label class="labelText">9. Applicant/Beneficiary is expected to support and/or participate in MDAS fund-raising and public awareness efforts.</label>
+      <label class="labelText">10. Applicant must accept the decision made by the Committee.  All decisions are final.</label>
+  </div>
   </fieldset>
   <footer class="buttonsGroup">
     <button type="button" id="previous" class="buttonNeutral">Previous</button>
