--- a/src/pages/mdas/musculardystrophyassociation.html
+++ b/src/pages/mdas/musculardystrophyassociation.html
@@ -123,8 +123,9 @@
                 <label><input type="checkbox" name="sectionC_ModeTransport" id="sectionC_ModeTransportVehicle" value="No"> Vehicle with hydraulic lift/ramp</label>
                 <label><input type="checkbox" name="sectionC_ModeTransport" id="sectionC_ModeTransportOtherAgency" value="Yes"> Other Agency’s vehicle</label>
                 <label><input type="checkbox" name="sectionC_ModeTransport" id="sectionC_ModeTransportAmbulance" value="No"> Ambulance</label>
-                <label><input type="checkbox" name="sectionC_ModeTransport" id="sectionC_ModeTransportOthers" data-form-other="sectionC_PurposeTransportOthersText" value="Others"> Others (pls specify) </label>
-                <input type="text" id="sectionC_ModeTransportOtherText" name="sectionC_ModeTransportOtherText" placeholder="Others (pls specify)" data-form-other-text="true" />
+                <label><input type="checkbox" name="sectionC_ModeTransport" id="sectionC_ModeTransportOthers" data-form-other="sectionC_ModeTransportOtherText" value="Others"> Others (pls specify) </label>
+                <input type="text" id="sectionC_ModeTransportOtherText"  name="sectionC_ModeTransportOtherText" disabled="disabled" placeholder="Others (pls specify)" data-form-other-text="true" />
+
             </div>
         </div>
         <h3>SECTION C1</h3>
@@ -270,31 +271,36 @@
         <h3><u>terms & conditions</u></h3>
         <table id="mainTable">
             <tr><td  class="titleTr" align="center">MDAS Accessible Transit & Mobility Assistance/Subsidy (ATMAS)</td></tr>
-            <tr><td>This financial assistance is open to members with Muscular Dystrophy to help them ease the high transportation costs in order to attend school and/or attend medical appointments.  The approved subsidy is valid for one calendar year.  Members may submit their application for subsequent year, subject to availability of funds.</td></tr>
-            <tr><td>Interested members could apply for subsidy for the following purposes</td></tr>
-            <tr><td>1)	attending school by using vehicle with hydraulic lift; or</td></tr>
-            <tr><td>2)	attending medical appointments for muscular dystrophy or its related complications as certified by the medical doctor.</td></tr>
+            <tr><td>
+              This financial assistance is open to members with Muscular Dystrophy to help them ease the high transportation costs in order to attend school and/or attend medical appointments.  The approved subsidy is valid for one calendar year.  Members may submit their application for subsequent year, subject to availability of funds.
+                <br><br>Interested members could apply for subsidy for the following purposes
+                <br>&nbsp;&nbsp;1)	attending school by using vehicle with hydraulic lift; or
+                <br>&nbsp;&nbsp;2)	attending medical appointments for muscular dystrophy or its related complications as certified by &nbsp;&nbsp;the medical doctor.
+            </td>
+            </tr>
         </table>
         <table id="mainTable">
             <tr><td class="titleTr" align="center">Transport for Schooling</td></tr>
-            <tr><td>1. Application is open to members with Muscular Dystrophy who are attending mainstream school or special education school and require traveling in taxi or vehicle with hydraulic lift/ramp due to the condition.</td></tr>
-            <tr><td>2. MDAS may consider referring applicant to SG Enable for full/partial transport subsidy.</td></tr>
-            <tr><td>3. Successful applicant will claim for the approved subsidy amount for ONE calendar year.</td></tr>
-            <tr><td>4. Applicant must be member of MDAS with no arrears of membership subscription fees.</td></tr>
-            <tr><td>5. Application is subject to Committee’s decision, of which, the decision is final.</td></tr>
-            <tr><td>6. Successful applicant must submit their monthly claim by 7th of the following month together with original receipts of transport cost.</td></tr>
-            <tr><td>7. Applicant/Beneficiary is expected to support and/or participate in MDAS fund-raising and public awareness efforts.</td></tr>
+            <tr><td>1. Application is open to members with Muscular Dystrophy who are attending mainstream school or special education school and require traveling in taxi or vehicle with hydraulic lift/ramp due to the condition.
+            <br>2. MDAS may consider referring applicant to SG Enable for full/partial transport subsidy.
+            <br>3. Successful applicant will claim for the approved subsidy amount for ONE calendar year.
+            <br>4. Applicant must be member of MDAS with no arrears of membership subscription fees.
+            <br>5. Application is subject to Committee’s decision, of which, the decision is final.
+            <br>6. Successful applicant must submit their monthly claim by 7th of the following month together with original receipts of transport cost.
+            <br>7. Applicant/Beneficiary is expected to support and/or participate in MDAS fund-raising and public awareness efforts.
+          </td></tr>
         </table>
        <table id="mainTable">
            <tr><td class="titleTr" align="center">Transport for Medical Consultation</td></tr>
-           <tr><td>1. Application is open to members with Muscular Dystrophy who needs to attend medical consultations due to muscular dystrophy or its related complications as certified by the doctor.  Medical appointments must be government recognized.</td></tr>
-           <tr><td>2. The Scheme will consider taxi/vehicle with hydraulic lift/ramp and ambulance but DO NOT obtain transportation subsidy from any other source.</td></tr>
-           <tr><td>3. Successful applicant will claim for the approved subsidy amount for ONE calendar year.</td></tr>
-           <tr><td>4. Applicant must be member of MDAS with no arrears of membership subscription fees.</td></tr>
-           <tr><td>5. Successful applicant must consider using MDAS vehicle for such trips, unless MDAS vehicle is not available or user requiring the use of ambulance facilities and equipment.</td></tr>
-           <tr><td>6. Application is subject to Committee’s decision, of which, the decision is final.</td></tr>
-           <tr><td>7. Successful applicant must submit their claim(s) by 7th of the following month together with original receipts of transport cost and certification of medical appointment(s).</td></tr>
-           <tr><td>8. Applicant/Beneficiary is expected to support and/or participate in MDAS fund-raising and public awareness efforts.</td></tr>
+           <tr><td>1. Application is open to members with Muscular Dystrophy who needs to attend medical consultations due to muscular dystrophy or its related complications as certified by the doctor.  Medical appointments must be government recognized.
+              <br>2. The Scheme will consider taxi/vehicle with hydraulic lift/ramp and ambulance but DO NOT obtain transportation subsidy from any other source.
+              <br>3. Successful applicant will claim for the approved subsidy amount for ONE calendar year.
+              <br>4. Applicant must be member of MDAS with no arrears of membership subscription fees.
+              <br>5. Successful applicant must consider using MDAS vehicle for such trips, unless MDAS vehicle is not available or user requiring the use of ambulance facilities and equipment.
+              <br>6. Application is subject to Committee’s decision, of which, the decision is final.
+              <br>7. Successful applicant must submit their claim(s) by 7th of the following month together with original receipts of transport cost and certification of medical appointment(s).
+              <br>8. Applicant/Beneficiary is expected to support and/or participate in MDAS fund-raising and public awareness efforts.
+           </td></tr>
        </table>
         <div>
             <i> Dated :  July 2016</i>
